v1.2 add images for tracks
